--- a/9space_snapshot_api/Dockerfile
+++ b/9space_snapshot_api/Dockerfile
@@ -1,9 +1,7 @@
 ARG BUILD_FROM
 FROM ${BUILD_FROM}
 
-RUN apk add --no-cache ffmpeg python3 py3-pip
-
-RUN pip3 install --no-cache-dir fastapi uvicorn
+RUN apk add --no-cache ffmpeg python3 py3-fastapi py3-uvicorn
 
 COPY app.py /app/app.py
 COPY run.sh /run.sh
