Install FastAPI in venv

--- a/9space_snapshot_api/Dockerfile
+++ b/9space_snapshot_api/Dockerfile
@@ -3,10 +3,13 @@ FROM ${BUILD_FROM}
 
 RUN apk add --no-cache ffmpeg python3 py3-pip
 
-RUN pip3 install --no-cache-dir fastapi uvicorn
+RUN python3 -m venv /opt/venv \
+    && /opt/venv/bin/pip install --no-cache-dir fastapi uvicorn
 
 COPY app.py /app/app.py
 COPY run.sh /run.sh
 RUN chmod +x /run.sh
+
+ENV PATH="/opt/venv/bin:${PATH}"
 
 CMD ["/run.sh"]
