--- a/9space_snapshot_api/Dockerfile
+++ b/9space_snapshot_api/Dockerfile
@@ -6,7 +6,7 @@ RUN apk add --no-cache ffmpeg python3 py3-pip
 RUN python3 -m venv /opt/venv \
     && /opt/venv/bin/pip install --no-cache-dir fastapi uvicorn
 
-COPY app.py /app/app.py
+COPY main.py /app/main.py
 COPY run.sh /run.sh
 RUN chmod +x /run.sh
 
